--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.url=jdbc:postgresql://localhost:5432/birthday
+spring.datasource.username=postgres
+spring.datasource.password=a2jcyccz4
+spring.application.name=Учёт дни рождения
