Отображение людей и удаление

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/birthday
 spring.datasource.username=postgres
 spring.datasource.password=a2jcyccz4
 spring.application.name=Учёт дни рождения
+spring.freemarker.template-loader-path: classpath:/templates
+spring.freemarker.suffix: .ftl
