--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/birthday
 spring.datasource.username=postgres
 spring.datasource.password=a2jcyccz4
+spring.jpa.generate-ddl=false
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=validate
+spring.flyway.baselineOnMigrate = true
 spring.application.name=Учёт дни рождения
 spring.freemarker.template-loader-path: classpath:/templates
 spring.freemarker.suffix: .ftl
