Выборка по дню рождению. Сортировка по кличеству дней до ДР

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/birthday
 spring.datasource.username=postgres
 spring.datasource.password=a2jcyccz4
 spring.jpa.generate-ddl=false
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=validate
-spring.flyway.baselineOnMigrate = true
 spring.application.name=Учёт дни рождения
+server.port=8081
 spring.freemarker.template-loader-path: classpath:/templates
 spring.freemarker.suffix: .ftl
